# textalyzer

./: .gitignore  LICENSE  README.md  books.csv  pyproject.toml
.claude/: CLAUDE.md
docker/gutendex/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
src/textalyzer/: __init__.py  author_search.py  config.py  downloader.py  indexer.py  search.py
tests/: __init__.py  conftest.py  test_author_search.py  test_config.py  test_downloader.py  test_indexer.py  test_search.py
