[project]
name = "textalyzer"
version = "0.1.0"
description = "Download and analyze books from Project Gutenberg"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.scripts]
download = "textalyzer.downloader:main"
index = "textalyzer.indexer:main"
author-search = "textalyzer.author_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/textalyzer"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=textalyzer --cov-report=term-missing"

[tool.coverage.run]
source = ["src/textalyzer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
]
